@@ -1,4 +1,33 @@
 package com.dong.demo.test.jvm;
 
+
+import java.util.ArrayList;
+import java.util.List;
+
+/**
+ *
+ * -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:MaxDirectMemorySize=5m
+ *
+ * java.lang.OutOfMemoryError: Java heap spaceException in thread "main" java.lang.OutOfMemoryError: GC overhead limit exceeded
+ *
+ *
+ *
+ */
 public class GCOverheadDemo {
+
+    public static void main(String[] args) {
+
+        int i =0;
+        List<String> list = new ArrayList<>();
+        try {
+            while (true){
+                list.add(String.valueOf(++i).intern());
+            }
+        }catch (Throwable e){
+            System.out.println("************"+i);
+            e.printStackTrace();
+            throw e;
+        }
+
+    }
 }
